--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </picture> <!--logo-->
                 <nav>
                     <a href="#herois">HEROIS</a>
-                    <a href="">FILMES</a>
-                    <a href="">SITE</a>
+                    <a href="#filmes">FILMES</a>
+                    <a href="#site">SITE</a>
                 </nav>
                 <i class="fas fa-bars"></i>
             </div>
