--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
                     <img src="img/logo-marvel.png" alt="logo da marvel">
                 </picture> <!--logo-->
                 <nav>
-                    <a href="#herois">HEROIS</a>
-                    <a href="#filmes">FILMES</a>
-                    <a href="#site">SITE</a>
+                    <a href="#herois">
+                        <p class="herois-btn">HEROIS</p>
+                    </a>
+                    <a href="#filmes">
+                        <p class="filme-btn">FILMES</p>
+                    </a>
+                    <a href="#site">
+                        <p class="site-btn">SITE</p>
+                    </a>
                 </nav>
                 <i class="fas fa-bars"></i>
             </div>
@@ -234,5 +240,6 @@
             </li>
         </ul>
     </aside>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
