--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
                 <picture class="logo">
                     <img src="img/logo-marvel.png" alt="logo da marvel">
                 </picture> <!--logo-->
-                <nav>
-                    <a href="#herois">
+                <nav id="nav-list">
+                    <a class="links" href="#herois">
                         <p class="herois-btn">HEROIS</p>
                     </a>
-                    <a href="#filmes">
+                    <a class="links" href="#filmes">
                         <p class="filme-btn">FILMES</p>
                     </a>
-                    <a href="#site">
+                    <a class="links" href="#site">
                         <p class="site-btn">SITE</p>
                     </a>
+
                 </nav>
                 <i class="fas fa-bars"></i>
             </div>
